[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/DataManagement/LauncherManager.cs" type="Script" id=1]
[ext_resource path="res://Scripts/UI/InstallersList.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/InstallerButton.gd" type="Script" id=3]
[ext_resource path="res://TabPanel.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UI/ProjectsList.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI/ProjectButton.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/DividerButton.gd" type="Script" id=7]
[ext_resource path="res://SubScenes/Info.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/UI/VersionMenu.gd" type="Script" id=9]
[ext_resource path="res://Art/KebabMenu.png" type="Texture" id=10]
[ext_resource path="res://Scripts/UI/ProjectKebabMenu.gd" type="Script" id=11]
[ext_resource path="res://Scripts/UI/InstallerKebabMenu.gd" type="Script" id=12]
[ext_resource path="res://Scripts/UI/NewProjectButton.gd" type="Script" id=13]

[sub_resource type="GDScript" id=4]
script/source = "extends Control


func _hide():
	visible = false
"

[sub_resource type="GDScript" id=1]
script/source = "extends MenuButton


var popup:PopupMenu
var controller:Control


func _ready():
	popup = get_popup()
	controller = get_node(\"../../..\")

	if !OS.is_debug_build():
		visible = false
		return

	for i in popup.get_item_count():
		popup.set_item_checked(i, popup.get_item_text(i) == OS.get_name())
		if popup.get_item_text(i) == OS.get_name():
			#popup.set_current_index(i)
			text = popup.get_item_text(i)

	var err = popup.connect(\"index_pressed\", self, \"_on_menu_item_selected\")
	if err != OK:
		print(\"Connection failed!\")

func _on_menu_item_selected(index:int):
	text = popup.get_item_text(index)
	controller.call(\"_onDebugOsSelected\", popup.get_item_text(index))
"

[sub_resource type="GDScript" id=2]
script/source = "extends Button

func _ready():
	visible = OS.is_debug_build()
"

[node name="Controller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
useLocalData = true

[node name="TabPanel" type="Panel" parent="."]
modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
anchor_right = 0.17
anchor_bottom = 1.0
margin_right = -0.0800018
script = ExtResource( 4 )

[node name="VBoxContainer_Top" type="VBoxContainer" parent="TabPanel"]
margin_right = 173.0
margin_bottom = 376.0

[node name="ProjectsButton" type="Button" parent="TabPanel/VBoxContainer_Top"]
margin_right = 173.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "Projects"

[node name="InstallersButton" type="Button" parent="TabPanel/VBoxContainer_Top"]
margin_top = 64.0
margin_right = 173.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
text = "Installers"

[node name="CustomInstallersButton" type="Button" parent="TabPanel/VBoxContainer_Top"]
visible = false
margin_top = 128.0
margin_right = 173.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "Custom Installers"

[node name="VBoxContainer_Bottom" type="VBoxContainer" parent="TabPanel"]
visible = false
margin_left = -1.0
margin_top = 375.0
margin_right = 172.0
margin_bottom = 600.0
alignment = 2

[node name="SettingsButton" type="Button" parent="TabPanel/VBoxContainer_Bottom"]
margin_top = 165.0
margin_right = 173.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 60 )
text = "Settings"

[node name="ProjectsPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 174.0

[node name="AddProjectsContainer" type="Control" parent="ProjectsPanel"]
anchor_right = 1.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ProjectsPanel/AddProjectsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = -1.0
margin_bottom = -10.0
text = "Drag and Drop projects to add to the list"
align = 1

[node name="NewProjectVersionMenu" type="MenuButton" parent="ProjectsPanel/AddProjectsContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = 6.0
margin_right = -86.0
margin_bottom = -8.0
grow_horizontal = 0
focus_mode = 2
text = "Build"
script = ExtResource( 9 )

[node name="ProjectButton" type="Button" parent="ProjectsPanel/AddProjectsContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "New"
script = ExtResource( 13 )

[node name="ProjectsList" type="ScrollContainer" parent="ProjectsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
scroll_horizontal_enabled = false

[node name="ProjectEntries" type="VBoxContainer" parent="ProjectsPanel/ProjectsList"]
margin_right = 850.0
margin_bottom = 89.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 5 )

[node name="HSeparator" type="HSeparator" parent="ProjectsPanel/ProjectsList/ProjectEntries"]
margin_right = 850.0
margin_bottom = 4.0

[node name="Entry" type="Control" parent="ProjectsPanel/ProjectsList/ProjectEntries"]
margin_top = 8.0
margin_right = 850.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 81 )
size_flags_horizontal = 3

[node name="ProjectButton" type="Button" parent="ProjectsPanel/ProjectsList/ProjectEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="ProjectsPanel/ProjectsList/ProjectEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
text = "Test Text"
align = 1
valign = 1

[node name="Favorite" type="CheckBox" parent="ProjectsPanel/ProjectsList/ProjectEntries/Entry"]
margin_left = 6.0
margin_top = 7.0
margin_right = 213.0
margin_bottom = 31.0
button_mask = 0
text = "Favorite"

[node name="KebabMenu" type="MenuButton" parent="ProjectsPanel/ProjectsList/ProjectEntries/Entry"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 7.0
margin_right = 4.0
margin_bottom = 33.0
grow_horizontal = 0
focus_mode = 2
icon = ExtResource( 10 )
script = ExtResource( 11 )

[node name="VersionMenu" type="MenuButton" parent="ProjectsPanel/ProjectsList/ProjectEntries/Entry"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_top = 47.0
margin_right = -14.0
margin_bottom = 73.0
grow_horizontal = 0
text = "Build"
script = ExtResource( 9 )

[node name="NewInstallerEntry" type="Control" parent="ProjectsPanel"]
visible = false
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 40 )
script = SubResource( 4 )

[node name="Panel" type="Panel" parent="ProjectsPanel/NewInstallerEntry"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ProjectsPanel/NewInstallerEntry"]
modulate = Color( 1, 0.984314, 0, 1 )
anchor_right = 1.0
anchor_bottom = 0.988
margin_bottom = -0.0279999
text = "New installer available!!!"
align = 1
valign = 1

[node name="DeleteButton" type="Button" parent="ProjectsPanel/NewInstallerEntry"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 11.0
margin_right = -20.0
margin_bottom = 31.0
text = "X"

[node name="InstallersPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 174.0

[node name="InstallersList" type="ScrollContainer" parent="InstallersPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
scroll_horizontal_enabled = false

[node name="InstallerEntries" type="VBoxContainer" parent="InstallersPanel/InstallersList"]
margin_right = 850.0
margin_bottom = 155.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="InstallersPanel/InstallersList/InstallerEntries"]
margin_right = 850.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="InstallersPanel/InstallersList/InstallerEntries"]
margin_top = 8.0
margin_right = 850.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 30 )
text = "Click a version to show the installers available for that version"
align = 1
valign = 1

[node name="HSeparator2" type="HSeparator" parent="InstallersPanel/InstallersList/InstallerEntries"]
margin_top = 42.0
margin_right = 850.0
margin_bottom = 46.0

[node name="DividerButton" type="Button" parent="InstallersPanel/InstallersList/InstallerEntries"]
margin_top = 50.0
margin_right = 850.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 20 )
text = "3.0"
script = ExtResource( 7 )

[node name="Entry" type="Control" parent="InstallersPanel/InstallersList/InstallerEntries"]
margin_top = 74.0
margin_right = 850.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 81 )
size_flags_horizontal = 3

[node name="LaunchButton" type="Button" parent="InstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="InstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
text = "Test Text"
align = 1
valign = 1

[node name="Downloaded" type="CheckBox" parent="InstallersPanel/InstallersList/InstallerEntries/Entry"]
margin_left = 6.0
margin_top = 7.0
margin_right = 213.0
margin_bottom = 31.0
mouse_filter = 2
button_mask = 0
text = "Downloaded"

[node name="KebabMenu" type="MenuButton" parent="InstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 30.0
grow_horizontal = 0
focus_mode = 2
icon = ExtResource( 10 )
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="InstallersPanel"]
margin_right = 856.0
margin_bottom = 40.0
custom_constants/separation = 50
alignment = 1

[node name="MenuButton" type="MenuButton" parent="InstallersPanel/HBoxContainer"]
margin_left = 48.0
margin_right = 110.0
margin_bottom = 40.0
focus_mode = 2
text = "Platform"
items = [ "X11", null, 0, false, false, -1, 0, null, "", false, "OSX", null, 0, false, false, 0, 0, null, "", false, "Windows", null, 0, false, false, 1, 0, null, "", false ]
script = SubResource( 1 )

[node name="DownloadAll" type="Button" parent="InstallersPanel/HBoxContainer"]
margin_left = 160.0
margin_right = 256.0
margin_bottom = 40.0
text = "Download All"
script = SubResource( 2 )

[node name="InstalledOnlyToggle" type="CheckBox" parent="InstallersPanel/HBoxContainer"]
margin_left = 306.0
margin_right = 423.0
margin_bottom = 40.0
text = "Installed Only"

[node name="ClassicToggle" type="CheckBox" parent="InstallersPanel/HBoxContainer"]
margin_left = 473.0
margin_right = 542.0
margin_bottom = 40.0
pressed = true
text = "Classic"

[node name="MonoToggle" type="CheckBox" parent="InstallersPanel/HBoxContainer"]
margin_left = 592.0
margin_right = 654.0
margin_bottom = 40.0
pressed = true
text = "Mono"

[node name="PreReleaseToggle" type="CheckBox" parent="InstallersPanel/HBoxContainer"]
margin_left = 704.0
margin_right = 807.0
margin_bottom = 40.0
text = "Pre-Release"

[node name="CustomInstallersPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 174.0

[node name="InstallersList" type="ScrollContainer" parent="CustomInstallersPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
scroll_horizontal_enabled = false

[node name="InstallerEntries" type="VBoxContainer" parent="CustomInstallersPanel/InstallersList"]
margin_right = 850.0
margin_bottom = 81.0
size_flags_horizontal = 3
alignment = 1

[node name="Entry" type="Control" parent="CustomInstallersPanel/InstallersList/InstallerEntries"]
margin_right = 850.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 81 )
size_flags_horizontal = 3

[node name="LaunchButton" type="Button" parent="CustomInstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CustomInstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_right = 1.0
margin_bottom = 80.0
text = "Test Text"
align = 1
valign = 1

[node name="Downloaded" type="CheckBox" parent="CustomInstallersPanel/InstallersList/InstallerEntries/Entry"]
margin_left = 6.0
margin_top = 7.0
margin_right = 213.0
margin_bottom = 31.0
mouse_filter = 2
button_mask = 0
text = "Downloaded"

[node name="KebabMenu" type="MenuButton" parent="CustomInstallersPanel/InstallersList/InstallerEntries/Entry"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 30.0
grow_horizontal = 0
focus_mode = 2
icon = ExtResource( 10 )
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="CustomInstallersPanel"]
visible = false
margin_right = 856.0
margin_bottom = 40.0
custom_constants/separation = 50
alignment = 1

[node name="MenuButton" type="MenuButton" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 48.0
margin_right = 110.0
margin_bottom = 40.0
focus_mode = 2
text = "Platform"
items = [ "X11", null, 0, false, false, -1, 0, null, "", false, "OSX", null, 0, false, false, 0, 0, null, "", false, "Windows", null, 0, false, false, 1, 0, null, "", false ]
script = SubResource( 1 )

[node name="DownloadAll" type="Button" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 160.0
margin_right = 256.0
margin_bottom = 40.0
text = "Download All"
script = SubResource( 2 )

[node name="InstalledOnlyToggle" type="CheckBox" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 306.0
margin_right = 423.0
margin_bottom = 40.0
text = "Installed Only"

[node name="ClassicToggle" type="CheckBox" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 473.0
margin_right = 542.0
margin_bottom = 40.0
pressed = true
text = "Classic"

[node name="MonoToggle" type="CheckBox" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 592.0
margin_right = 654.0
margin_bottom = 40.0
pressed = true
text = "Mono"

[node name="PreReleaseToggle" type="CheckBox" parent="CustomInstallersPanel/HBoxContainer"]
margin_left = 704.0
margin_right = 807.0
margin_bottom = 40.0
text = "Pre-Release"

[node name="Info" parent="." instance=ExtResource( 8 )]
visible = false

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a Directory"
mode = 2
access = 2

[connection signal="pressed" from="TabPanel/VBoxContainer_Top/ProjectsButton" to="TabPanel" method="_onProjectsButtonPressed"]
[connection signal="pressed" from="TabPanel/VBoxContainer_Top/InstallersButton" to="TabPanel" method="_onInstallersButtonPressed"]
[connection signal="pressed" from="TabPanel/VBoxContainer_Top/CustomInstallersButton" to="TabPanel" method="_onCustomInstallersButtonPressed"]
[connection signal="pressed" from="ProjectsPanel/AddProjectsContainer/ProjectButton" to="." method="_onNewProjectPressed"]
[connection signal="pressed" from="ProjectsPanel/ProjectsList/ProjectEntries/Entry/ProjectButton" to="ProjectsPanel/ProjectsList/ProjectEntries/Entry/ProjectButton" method="_on_pressed"]
[connection signal="pressed" from="ProjectsPanel/NewInstallerEntry/DeleteButton" to="ProjectsPanel/NewInstallerEntry" method="_hide"]
[connection signal="pressed" from="InstallersPanel/InstallersList/InstallerEntries/DividerButton" to="InstallersPanel/InstallersList/InstallerEntries/DividerButton" method="_onDividerButtonPressed"]
[connection signal="pressed" from="InstallersPanel/InstallersList/InstallerEntries/Entry/LaunchButton" to="InstallersPanel/InstallersList/InstallerEntries/Entry/LaunchButton" method="_on_pressed"]
[connection signal="pressed" from="InstallersPanel/HBoxContainer/DownloadAll" to="." method="_onDownloadAllPressed"]
[connection signal="toggled" from="InstallersPanel/HBoxContainer/InstalledOnlyToggle" to="." method="_onInstalledOnlyToggled"]
[connection signal="toggled" from="InstallersPanel/HBoxContainer/ClassicToggle" to="." method="_onClassicToggled"]
[connection signal="toggled" from="InstallersPanel/HBoxContainer/MonoToggle" to="." method="_onMonoToggled"]
[connection signal="toggled" from="InstallersPanel/HBoxContainer/PreReleaseToggle" to="." method="_onPreReleaseToggled"]
[connection signal="pressed" from="CustomInstallersPanel/InstallersList/InstallerEntries/Entry/LaunchButton" to="CustomInstallersPanel/InstallersList/InstallerEntries/Entry/LaunchButton" method="_on_pressed"]
[connection signal="pressed" from="CustomInstallersPanel/HBoxContainer/DownloadAll" to="." method="_onDownloadAllPressed"]
[connection signal="toggled" from="CustomInstallersPanel/HBoxContainer/InstalledOnlyToggle" to="." method="_onInstalledOnlyToggled"]
[connection signal="toggled" from="CustomInstallersPanel/HBoxContainer/ClassicToggle" to="." method="_onClassicToggled"]
[connection signal="toggled" from="CustomInstallersPanel/HBoxContainer/MonoToggle" to="." method="_onMonoToggled"]
[connection signal="toggled" from="CustomInstallersPanel/HBoxContainer/PreReleaseToggle" to="." method="_onPreReleaseToggled"]
[connection signal="dir_selected" from="FileDialog" to="." method="_onFileDialogDirSelected"]
